babel doc improved