@@ -1,8 +1,14 @@
-#To be called from the babel root directory
+#!/bin/bash
 
-#Generation the scaladoc and the coverage report to be done
-#export MAVEN_OPTS="-XX:MaxPermSize=256m -Xmx1024m"
-#mvn -Pscaladoc -Pcoverage verify
+#How to use it: just call this script from the project root directory.
+
+# Setup if you want to use virtual python environment
+#virtualenv ENV
+#source ./ENV/bin/activate
+
+pip install sphinx sphinx_bootstrap_theme
+#concerning the slides
+pip install sphinxjp.themecore sphinxjp.themes.impressjs
 
 cd babel-doc
 make clean
@@ -17,18 +23,9 @@ cd ../..
 mkdir build/html/slides
 cp -R slides/overview/_build/html build/html/slides/overview
 
-########################################################################################################################
-#To be done manually (as a step in a build system)
-########################################################################################################################
-#git fetch --all
-#bash babel-doc/documentation.sh
-#git checkout gh-pages
-#git rm -rf .
-#git reset HEAD .gitignore .nojekyll
-#git checkout -- .gitignore .nojekyll
-#cp -R  babel-doc/build/html/* .
-#git add .
-#git commit -m "documentation update" --author "Crossing-Tech SA <github@crossing-tech.com>"
-#git push origin gh-pages
-########################################################################################################################
+#Clean the python virtual env
+cd ..
+
+#cleaning of the virtual python environment
+# deactivate 
 
